--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-phone-number-input": "^3.3.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.64.1",
     "typescript": "^4.9.5",
